--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,11 +4,9 @@ upstream backend {
 
 server {
     listen 80;
-    server_name your_domain.com;
+    server_name 89.208.105.210;
 
     location / {
         proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
