--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,8 +1,8 @@
 version: "3.8"
 
 networks:
- custom:
-  name: custom
+  custom:
+    name: custom
 
 
 services:
@@ -11,12 +11,30 @@ services:
   web:
     container_name: "web"
     image: nginx:alpine
+    restart: unless-stopped
     depends_on:
-      - app
+      - certbot
     ports:
       - "8082:80"
+      - "443:443"
     volumes:
       - ./nginx:/etc/nginx/conf.d
+      - ./certbot:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: '/bin/sh -c "while :; do sleep 24h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    networks:
+      - custom
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    restart: unless-stopped
+    depends_on:
+      - app
+    volumes:
+      - ./certbot:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 744h & wait $${!}; done;'"
     networks:
       - custom
 
@@ -27,6 +45,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: unless-stopped
     ports:
       - "8000:8000"
     networks:
