--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,9 +4,33 @@ upstream backend {
 
 server {
     listen 80;
-    server_name 89.208.105.210;
+    server_name persreshenie.ru www.persreshenie.ru;
+    return 301 https://$server_name$request_uri;
+    
 
     location / {
         proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+
+server {
+    listen 443 ssl;
+    server_name persreshenie.ru www.persreshenie.ru;
+
+
+    ssl_certificate /etc/letsencrypt/live/persreshenie.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/persreshenie.ru/privkey.pem;
+
+
+
+    location / {
+        proxy_pass http://backend;
+	proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
