--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -13,28 +13,13 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     depends_on:
-      - certbot
+      - app
     ports:
       - "8082:80"
       - "443:443"
     volumes:
       - ./nginx:/etc/nginx/conf.d
-      - ./certbot:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: '/bin/sh -c "while :; do sleep 24h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
-    networks:
-      - custom
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    restart: unless-stopped
-    depends_on:
-      - app
-    volumes:
-      - ./certbot:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 744h & wait $${!}; done;'"
+      - ./nginx/persreshenie.ru:/etc/cert 
     networks:
       - custom
 
