--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -6,14 +6,6 @@ server {
     listen 80;
     server_name persreshenie.ru www.persreshenie.ru;
     return 301 https://$server_name$request_uri;
-    
-
-    location / {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
 }
 
 
@@ -22,8 +14,8 @@ server {
     server_name persreshenie.ru www.persreshenie.ru;
 
 
-    ssl_certificate /etc/letsencrypt/live/persreshenie.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/persreshenie.ru/privkey.pem;
+    ssl_certificate /etc/cert/fullchain.pem;
+    ssl_certificate_key /etc/cert/privkey.pem;
 
 
 
