--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,18 +4,18 @@ upstream backend {
 
 server {
     listen 80;
-    server_name persreshenie.ru www.persreshenie.ru;
+    server_name ... ...;
     return 301 https://$server_name$request_uri;
 }
 
 
 server {
     listen 443 ssl;
-    server_name persreshenie.ru www.persreshenie.ru;
+    server_name ... ...;
 
 
-    ssl_certificate /etc/cert/fullchain.pem;
-    ssl_certificate_key /etc/cert/privkey.pem;
+    ssl_certificate /...
+    ssl_certificate_key /...
 
 
 
