--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -18,8 +18,8 @@ services:
       - "8082:80"
       - "443:443"
     volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - ./nginx/persreshenie.ru:/etc/cert 
+      - ./nginx:
+      - ./nginx/
     networks:
       - custom
 
